# pytrainer

./: .git_archival.txt  .gitignore  .travis.yml  CHANGES  COPYING  INSTALL  Makefile  PLUGINS.README  README.md  README.txt  ToDo  example.gpx  gpxcut.sh  makedeb.sh  messages.pot  mozpytrainer.sh  opensuse_mozpytrainer.sh  pyproject.toml  pytrainer.appdata.xml  pytrainer.desktop  pytrainer.py  pytrainer.sh  pytrainer.style  setup.py  tox.ini
.github/workflows/: test.yaml
DOC/: DOC  makegraph-0.2.sh  makegraph.py  makegraph.sh  medicion.txt  reg.gpsdrive  reg.gpx  reg.txt  reg.txt_old
DOC/googlepoligon/: DOC  (+2 more)
glade/: calendar.glade  date-entry.ui  equipment.glade  equipment.ui  extensions.glade  extensions.ui  filechooserdialog.glade  importdata.glade  importdata.ui  newrecord.glade  newrecord.ui  plugins.glade  plugins.ui  profile.glade  profile.ui  pytrainer.glade  pytrainer.glade.bak  pytrainer.glade.gladep  pytrainer.ui  selecttrackdialog.glade  selecttrackdialog.ui  warning.glade
import/: file_garminfit.py  file_garmintcxv1.py  file_garmintcxv2.py  file_garmintools.py  file_gpxplus.py  file_kml20.py  tool_gant.py  tool_garmintools.py  tool_gpsbabel.py  translate_garmintcxv2.xsl
imports/: file_garminfit.py  file_garmintcxv1.py  file_garmintcxv2.py  file_garmintools.py  file_gpxplus.py  file_gpxplusNokia.py  file_kml20.py  tool_gant.py  tool_garmintools.py  tool_gpsbabel.py  translate_garmintools.xsl
man/: README  manpage.src  manpage_pytrainer.src  pytrainer.1  pytrainer.7
maps/: index.html
pytrainer/: __init__.py  __main__.py  activitypool.py  athlete.py  daygraph.py  environment.py  equipment.py  extension.py  heartrategraph.py  importdata.py  main.py  monthgraph.py  platform.py  plugins.py  profile.py  record.py  recordgraph.py  save.py  sport.py  stats.py  timegraph.py  totalgraph.py  waypoint.py  weekgraph.py  yeargraph.py
schemas/: GarminTrainingCenterDatabase_v1-gpsbabel.xsd  GarminTrainingCenterDatabase_v2.xsd  README  Topografix_gpx11-Nokia.xsd  garmintools.xsd  kml20-geodistance.xsd  ogckml22.xsd  pytrainer-0.1.xsd  validate_gpsfile.py
utils/: translator.sh  update_localizations.sh
(+300 files in other folders)
