[project]
name = "pytrainer"
description = "The free sport tracking center"
readme = "README.md"
authors = [
    {name = "Fiz Vazquez"},
    {name = "John Blance"},
    {name = "David Garcia Granda"},
    {name = "Arnd Zapletal"},
    {name = "Nathan Jones"},
    {name = "Arto Jantunen"},
]
license={text = "GNU General Public License (GPL)"}
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "SQLAlchemy",
    "lxml",
    "matplotlib >= 3.6.0",
    "python-dateutil",
    "requests",
    "sqlalchemy-utils",
]

[project.gui-scripts]
pytrainer = "pytrainer.__main__:main"

[project.urls]
homepage = "https://github.com/pytrainer"
repository = "https://github.com/pytrainer"

[project.optional-dependencies]
mysql = ["mysqlclient"]
postgresql = ["psycopg2"]
gui = ["pycairo", "pygobject"]

[build-system]
requires = ["setuptools>=45", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "pytrainer/version.py"
parentdir_prefix_version = "pytrainer-"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["pytrainer*"]
